fixed youtube to stick in the space on mobile

--- a/style.css
+++ b/style.css
@@ -1603,6 +1603,20 @@ img {
   .single-web-icon:hover {
     box-shadow: 0 2px 50px 0 rgba(0, 0, 0, 0.15); }
 
+    .video-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      height: 0;
+  }
+  .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+  }
+
 /* ====== The End ====== */
 
 /*# sourceMappingURL=style.css.map */
